2005-12-26  Benhur Stein <benhur@inf.ufsm.br>
	* StatViewer/StatViewer.[hm]: correctly declare cell; remove .h
          inclusion

2005-12-26  Benhur Stein <benhur@inf.ufsm.br>
	* General/CondensedEntitiesArray.[hm]: added totalDuration variable
          and access methods
	* StorageController/AggregateState.m: -exclusiveDuration: add method
	* General/NSString+Additions.[hm]: added string drawing methods from
          PieCell
	* PajeSimulator/SimulContainer.m: added a FIXME comment to stopWithEvent
	* StatViewer/GNUmakefile: removed StatValue class
	* StatViewer/StatValue.[hm]: removed files
	* StatViewer/PieCell.[hm]: major change in pie drawing code
	* StatViewer/StatArray.[hm]: mostly rewritten
	* StatViewer/StatViewer.gorm: modified interface
	* StatViewer/StatViewer.[hm]: reflect interface changes

2005-12-26  Benhur Stein <benhur@inf.ufsm.br>
	* PajeSimulator/PajeSimul.m: -inputEntity: check for unknown event

2005-10-14  Benhur Stein <benhur@inf.ufsm.br>
	* PajeSimulator/UserState.m: encode/decode new variables

2005-10-02  Benhur Stein <benhur@inf.ufsm.br>
        * PajeEventDecoder/PajeEventDecoder.m: forgotten on previous commit

2005-10-02  Benhur Stein <benhur@inf.ufsm.br>
        * SpaceTimeViewer/DrawView+Drawing.m: optimize drawing code for
          variables

2005-10-02  Benhur Stein <benhur@inf.ufsm.br>
        * StorageController/Encapsulate.m: remove field names discovery
        * General/PajeType.[hm]: add knownEventTypes variable and
          -isKnownEventType: method
        * PajeSimulator/User{Event,State}.m: use new method to speed up
          field name discovery

2005-10-02  Benhur Stein <benhur@inf.ufsm.br>
        * SpaceTimeViewer/DrawView+Drawing.m: new drawing code for events with
          support for aggregates.

2005-10-01  Benhur Stein <benhur@inf.ufsm.br>
        * SpaceTimeViewer/DrawView+Drawing.m: new drawing code for states with
          support for aggregates.

2005-10-01  Benhur Stein <benhur@inf.ufsm.br>